added navbar and banner section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>INFLUENCER GEAR</title>
-</head>
-<body>
-    <header>
-
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="w-[1224px] mx-auto mt-[70px]">
+      <!-- navbar start -->
+      <nav class="flex justify-betwee">
+        <div>
+          <h3 class="nav-title font-poppins primary-color text-2xl font-bold">
+            Influencer products
+          </h3>
+        </div>
+        <div class="nav-menu">
+          <ul class="flex">
+            <li class="ml-[34px]">
+              <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Home</a
+              >
+            </li>
+            <li class="ml-[34px]">
+              <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Products</a
+              >
+            </li>
+            <li class="ml-[34px]">
+              <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Sign up</a
+              >
+            </li>
+            <li class="ml-[34px]">
+              <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Log In</a
+              >
+            </li>
+            <li class="ml-[34px]">
+              <a href="#"
+                ><span><i class="fa-solid fa-magnifying-glass"></i></span
+              ></a>
+            </li>
+            <li class="ml-[34px]">
+              <a href="#"
+                ><span><i class="fa-solid fa-cart-shopping"></i></span
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!-- banner start -->
+      <section>
+        <div class="banner mt-12 flex justify-between items-center">
+          <div class="banner-content max-w-[582px]">
+            <h1
+              class="primary-color text-[3.25rem] font-poppins font-bold leading-[135%]"
+            >
+              Start your Journey as Influencer
+            </h1>
+            <p
+              class="primary-color font-poppins text-[1rem] font-semibold my-4"
+            >
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+              vestibulum sed scelerisque eros. Lectus faucibus.
+            </p>
+            <button
+              class="py-2.5 px-6 bg-[#e02c6d] rounded-[41px] text-[1rem] font-bold text-white"
+            >
+              Preebook now
+              <span class="ml-2"><i class="fa-solid fa-arrow-right"></i></span>
+            </button>
+          </div>
+          <div class="banner-img">
+            <img src="images/banner.png" alt="" />
+          </div>
+        </div>
+      </section>
     </header>
     <main>
 
@@ -15,5 +94,5 @@
     <footer>
         
     </footer>
-</body>
+  </body>
 </html>
