--- a/index.html
+++ b/index.html
@@ -87,12 +87,262 @@
           </div>
         </div>
       </section>
+      <!-- sponsors side start -->
+      <section>
+        <div
+          class="sponsors flex justify-between py-9 px-[60px] mt-[60px] mb-[70px] border-y border-y-blue-200"
+        >
+          <img src="images/logos/Alibaba.svg" alt="" />
+          <img src="images/logos/Amazon.svg" alt="" />
+          <img src="images/logos/Daraz.pk Logo.svg" alt="" />
+          <img src="images/logos/Ebay.svg" alt="" />
+          <img src="images/logos/Rakuten.svg" alt="" />
+          <img src="images/logos/Walmart.svg" alt="" />
+          <img src="images/logos/Target.svg" alt="" />
+        </div>
+      </section>
     </header>
-    <main>
-
-    </main>
-    <footer>
+    <main class="max-w-[1098px] mx-auto">
+      <!-- popular -->
+      <section>
+        <div class="popular">
+          <h3
+            class="font-poppins primary-color text-[28px] font-semibold text-center mb-7"
+          >
+            Popular Collection
+          </h3>
+        </div>
+        <div class="grid grid-cols-3 justify-items-center gap-8">
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/tripod.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Flex Tripod
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $50.48
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/mic.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Microphone
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $120.25
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/airpod.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Airbuds
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $100.00
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/drone.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Drone
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $980.25
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/lights.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Light Setup
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $1200.00
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/setup.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Photoshoot set
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $820.40
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/camera.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Vlogging Camera
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $1800.80
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/single-light.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Green Screen
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $25.48
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div
+            class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
+          >
+            <img src="images/action.png" alt="" />
+            <h4
+              class="font-poppins text-[#18191f] text-[1.75rem] font-medium mt-3.5"
+            >
+              Action Camera
+            </h4>
+            <h5 class="text-2xl text-[rgba(0, 0, 0, 0.87)] font-inter">
+              $380.00
+            </h5>
+            <p class="font-roboto font-bold text-[#5e6366] mt-2 mb-1">
+              <span class="text-[#FB8200]"
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star-half-stroke"></i
+              ></span>
+              4.99
+            </p>
+            <p class="font-inter font-bold text-[#787885]">
+              Wordwide shifting available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="text-end"><a href="#"><button class="mt-[50px] mb-[70px] font-bold text-[1rem] text-[#E02C6D]">See More <span><i class="fa-solid fa-arrow-right"></i></span><button></a></div>
         
-    </footer>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
