added featured section "

--- a/index.html
+++ b/index.html
@@ -340,8 +340,20 @@
           </div>
         </div>
         <div class="text-end"><a href="#"><button class="mt-[50px] mb-[70px] font-bold text-[1rem] text-[#E02C6D]">See More <span><i class="fa-solid fa-arrow-right"></i></span><button></a></div>
-        
       </section>
+      <!-- featured start -->
+       <section>
+        <div class="flex items-center justify-between mb-24">
+            <div>
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="max-w-[610px] ">
+                <h3 class="primary-color font-bold text-[2.5rem] text-[#0a0826]">Featured products at one place</h3>
+                <p class="primary-color font-bold text-[1rem] my-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="bg-[#e02c6d] py-2.5 px-6 text-white text-[1rem] font-bold rounded-[12px]">Join Now <span class="ml-2"><i class="fa-solid fa-arrow-right"></i></span> </button>
+            </div>
+        </div>
+       </section>
     </main>
     <footer></footer>
   </body>
