added footer section and done project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="w-[1224px] mx-auto mt-[70px]">
       <!-- navbar start -->
-      <nav class="flex justify-betwee">
+      <nav class="flex justify-between">
         <div>
           <h3 class="nav-title font-poppins primary-color text-2xl font-bold">
             Influencer products
@@ -355,6 +355,18 @@
         </div>
        </section>
     </main>
-    <footer></footer>
+    <footer class="bg-[#0a0826] text-white text-center py-12">
+        <section>
+            <h5 class="font-poppins font-bold text-2xl">Influencer products</h5>
+            <p class="font-manrope font-bold text-[14px] my-1">Copyright © 2020  influencer products</p>
+            <p class="font-manrope font-bold text-[14px]">All rights reserved</p>
+            <ul class="flex justify-center mt-4">
+                <li class="w-[32px] h-[32px] leading-[32px] mr-4 bg-gray-800 rounded-[50%]"><a href="#"><span><i class="fa-brands fa-instagram"></i></span></a></li>
+                <li  class="w-[32px] h-[32px] leading-[32px] mr-4 bg-gray-800 rounded-[50%]"><a href="#"><span><i class="fa-brands fa-dribbble"></i></span></a></li>
+                <li  class="w-[32px] h-[32px] leading-[32px] mr-4 bg-gray-800 rounded-[50%]"><a href="#"><span><i class="fa-brands fa-twitter"></i></span></a></li>
+                <li  class="w-[32px] h-[32px] leading-[32px] bg-gray-800 rounded-[50%]"><a href="#"><span><i class="fa-brands fa-youtube"></i></span></a></li>
+            </ul>
+        </section>
+    </footer>
   </body>
 </html>
