responsive header and banner section

--- a/index.html
+++ b/index.html
@@ -7,11 +7,117 @@
     <title>INFLUENCER GEAR</title>
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header class="w-[1224px] mx-auto mt-[70px]">
-      <!-- navbar start -->
-      <nav class="flex justify-between">
+    <header>
+      
+
+
+<!-- navbar start -->
+
+<div class="navbar bg-base-100 shadow-sm">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li>
+        <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Home</a
+              >
+      </li>
+      <li>
+        <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Products</a
+              >
+      </li>
+      <li>
+        <a
+        href="#"
+        class="font-poppins font-semibold text-base primary-color"
+        >Sign up</a
+        >
+      </li>
+      <li>
+        <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Log In</a
+              >
+      </li>
+      <li>
+        <a href="#"
+        ><span><i class="fa-solid fa-magnifying-glass"></i></span
+          ></a>
+        </li>
+        <li><a href="#"
+                  ><span><i class="fa-solid fa-cart-shopping"></i></span
+                ></a>
+              </li>
+      </ul>
+    </div>
+    <a class="btn btn-ghost nav-title font-poppins primary-color text-2xl font-bold">Influencer products</a>
+  </div>
+  <div class="navbar-end hidden lg:flex">
+    <ul class="menu menu-horizontal px-1">
+      <li>
+        <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Home</a
+              >
+      </li>
+      <li>
+        <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Products</a
+              >
+      </li>
+      <li>
+        <a
+        href="#"
+        class="font-poppins font-semibold text-base primary-color"
+        >Sign up</a
+        >
+      </li>
+      <li>
+        <a
+                href="#"
+                class="font-poppins font-semibold text-base primary-color"
+                >Log In</a
+              >
+      </li>
+      <li>
+        <a href="#"
+        ><span><i class="fa-solid fa-magnifying-glass"></i></span
+          ></a>
+        </li>
+        <li><a href="#"
+                  ><span><i class="fa-solid fa-cart-shopping"></i></span
+                ></a>
+              </li>
+    </ul>
+  </div>
+  <!-- <div class="navbar-end">
+    <a class="btn">Button</a>
+  </div> -->
+</div>
+
+
+
+
+      
+      <!-- <nav class="flex justify-between">
         <div>
           <h3 class="nav-title font-poppins primary-color text-2xl font-bold">
             Influencer products
@@ -59,13 +165,13 @@
             </li>
           </ul>
         </div>
-      </nav>
+      </nav> -->
       <!-- banner start -->
-      <section>
-        <div class="banner mt-12 flex justify-between items-center">
-          <div class="banner-content max-w-[582px]">
+      <section class="max-w-[1224px] mx-auto mt-[25px] px-5 lg:px-0 lg:mt-[70px]">
+        <div class="banner mt-12 flex flex-col-reverse lg:flex-row lg:justify-between lg:items-center">
+          <div class="banner-content lg:max-w-[582px]">
             <h1
-              class="primary-color text-[3.25rem] font-poppins font-bold leading-[135%]"
+              class="primary-color mt-5 lg:mt-0 text-3xl lg:text-[3.25rem] font-poppins font-bold leading-[135%]"
             >
               Start your Journey as Influencer
             </h1>
@@ -88,9 +194,9 @@
         </div>
       </section>
       <!-- sponsors side start -->
-      <section>
+      <section class="max-w-[1224px] mx-auto mt-[25px] px-5 lg:px-0 lg:mt-[70px]">
         <div
-          class="sponsors flex justify-between py-9 px-[60px] mt-[60px] mb-[70px] border-y border-y-blue-200"
+          class="sponsors flex flex-wrap gap-5 justify-between py-4 lg:py-9 px-[30px] lg:px-[60px] mt-[30px] lg:mt-[60px] mb-[30px] lg:mb-[70px] border-y border-y-blue-200"
         >
           <img src="images/logos/Alibaba.svg" alt="" />
           <img src="images/logos/Amazon.svg" alt="" />
@@ -102,7 +208,7 @@
         </div>
       </section>
     </header>
-    <main class="max-w-[1098px] mx-auto">
+    <main hidden class="max-w-[1098px] mx-auto">
       <!-- popular -->
       <section>
         <div class="popular">
@@ -355,7 +461,7 @@
         </div>
        </section>
     </main>
-    <footer class="bg-[#0a0826] text-white text-center py-12">
+    <footer hidden class="bg-[#0a0826] text-white text-center py-12">
         <section>
             <h5 class="font-poppins font-bold text-2xl">Influencer products</h5>
             <p class="font-manrope font-bold text-[14px] my-1">Copyright © 2020  influencer products</p>
@@ -368,5 +474,7 @@
             </ul>
         </section>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
   </body>
 </html>
