full responsive done

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
       </section>
     </header>
-    <main hidden class="max-w-[1098px] mx-auto">
+    <main class="max-w-[1098px] mx-auto">
       <!-- popular -->
       <section>
         <div class="popular">
@@ -218,7 +218,7 @@
             Popular Collection
           </h3>
         </div>
-        <div class="grid grid-cols-3 justify-items-center gap-8">
+        <div class="grid grid-rows-1 lg:grid-cols-3 justify-items-center gap-8">
           <div
             class="box-shadow w-[329px] h-[476px] py-[25px] px-[30px] rounded-[8px]"
           >
@@ -445,23 +445,23 @@
             </p>
           </div>
         </div>
-        <div class="text-end"><a href="#"><button class="mt-[50px] mb-[70px] font-bold text-[1rem] text-[#E02C6D]">See More <span><i class="fa-solid fa-arrow-right"></i></span><button></a></div>
+        <div class="text-end mr-16 lg:mr-0"><a href="#"><button class="mt-6 lg:mt-[50px] mb-10 lg:mb-[70px] font-bold text-[1rem] text-[#E02C6D]">See More <span><i class="fa-solid fa-arrow-right"></i></span><button></a></div>
       </section>
       <!-- featured start -->
        <section>
-        <div class="flex items-center justify-between mb-24">
+        <div class="flex flex-col lg:flex-row items-center justify-between mx-5 lg:mx-0 mb-12 lg:mb-24">
             <div>
                 <img src="images/gear.png" alt="">
             </div>
-            <div class="max-w-[610px] ">
-                <h3 class="primary-color font-bold text-[2.5rem] text-[#0a0826]">Featured products at one place</h3>
-                <p class="primary-color font-bold text-[1rem] my-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+            <div class="max-w-[610px] mt-7">
+                <h3 class="primary-color font-bold text-4xl lg:text-[2.5rem] text-[#0a0826]">Featured products at one place</h3>
+                <p class="primary-color font-bold text-[1rem] my-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br class="hidden lg:block"> do amet sint. Velit officia consequat duis enim velit mollit. <br class="hidden lg:block"> Exercitation veniam consequat sunt nostrud amet.</p>
                 <button class="bg-[#e02c6d] py-2.5 px-6 text-white text-[1rem] font-bold rounded-[12px]">Join Now <span class="ml-2"><i class="fa-solid fa-arrow-right"></i></span> </button>
             </div>
         </div>
        </section>
     </main>
-    <footer hidden class="bg-[#0a0826] text-white text-center py-12">
+    <footer class="bg-[#0a0826] text-white text-center py-12">
         <section>
             <h5 class="font-poppins font-bold text-2xl">Influencer products</h5>
             <p class="font-manrope font-bold text-[14px] my-1">Copyright © 2020  influencer products</p>
